back/server/kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nomidot-server
  namespace: nomidot-staging
  labels:
    stage: staging
    name: nomidot-server
    app: nomidot-staging
spec:
  selector:
    matchLabels:
      app: nomidot-server
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        stage: staging
        name: nomidot-server
        app: nomidot-server
    spec:
      containers:
        - name: nomidot-server
          image: eu.gcr.io/test-installations-222013/nomidot-server@sha256:2acad6a5b35d293ec9a0a59f6949ed8afed5341125e7cde79f62b27af303910d
          ports:
            - name: nomidot-4000
              containerPort: 4000
