back/server/kubernetes/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nomidot-server
  namespace: nomidot-server
  labels:
    stage: staging
    name: nomidot-server
    app: nomidot-server
spec:
  type: LoadBalancer
  selector:
    app: nomidot-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
